<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/VPStyle"
        >

        <TextView
            android:id="@+id/questionTxt2"
            style="@style/textQuestionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/question2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/checkBoxGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginBig"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTxt2"

            >

            <CheckBox
                android:id="@+id/checkBox1Q2"
                style="@style/radioButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answear1q2" />

            <CheckBox
                android:id="@+id/checkBox2Q2"
                style="@style/radioButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answear2q2" />

            <CheckBox
                android:id="@+id/checkBox3Q2"
                style="@style/radioButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answear3q2" />

            <CheckBox
                android:id="@+id/checkBox4Q2"
                style="@style/VPStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answear4q2" /><!-- why I can't use theme for textColor?-->


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>